Define compiled classes at runtime
Compiled artifacts must preserve loader identity and runtime data used
during target-aware compilation. Hidden classes also cannot expose the
logical self name in LambdaMetafactory call sites because that name does
not resolve to the VM-created hidden identity. Strong metafactory proxy
classes must not turn weak generated callers into loader-lifetime
classes.

Add nominal and hidden class definers that install complete bundles,
initialize classes predictably, and expose generated classes without
leaking loader internals. Resolve hidden lambda implementations with the
generated lookup, but create a weak hidden adapter from the stable host
lookup for each linkage site. Support ordinary metafactory sites and the
flags-zero altMetafactory form while rejecting extensions that require a
different linkage contract. Keep the implementation handle in adapter
class data so instances contain only authored captures and neither the
factory nor loader retains the adapter or handle.